@startuml

hide empty description

title CVM-2\nState chart (FSM)\n

[*] --> InitialisedSubSystems : E_START / CVMinitialiseSubSystems()
InitialisedSubSystems : insertedMoney = 0
InitialisedSubSystems : priceCola = 125
InitialisedSubSystems ---> WaitForCoins : E_CONTINUE [no init error(s)]
InitialisedSubSystems ---> [*] : E_CONTINUE [init error(s)] / CVMshutdownSubSystems()

WaitForCoins --> Detected_20C : E_20C
Detected_20C : insertedMoney += 20
Detected_20C --> WaitForCoins : E_NOT_ENOUGH
Detected_20C --> WaitForCoins : \
	E_ENOUGH / CLDdispenseCola()\n CHDdispenseChange(change)

WaitForCoins --> Detected_50C : E_50C
Detected_50C : insertedMoney += 50
Detected_50C --> WaitForCoins : E_NOT_ENOUGH
Detected_50C --> WaitForCoins : \
	E_ENOUGH / CLDdispenseCola()\n CHDdispenseChange(change)

note right of InitialisedSubSystems
    All subsystems in CVM initialised and executed selftests
end note

note left of InitialisedSubSystems #green
    All currency values in cents (integers)
end note

@enduml
